Get Feature Info Fix, Menu Bar Fix

--- a/app/src/main/assets/verkehr/local.html
+++ b/app/src/main/assets/verkehr/local.html
@@ -68,6 +68,8 @@
     <!-- OSM Buildings-->
     <script src="../js/OSMBuildings-Leaflet.js"></script>
 
+    <script src="../js/Leaflet-WFST.src.js"></script>
+
 </head>
 
 <body>
@@ -94,6 +96,7 @@
         init_map();
         info();
     });
+
 
 </script>
 
