--- a/app/src/main/assets/siedlung/local.html
+++ b/app/src/main/assets/siedlung/local.html
@@ -65,8 +65,9 @@
     <link rel="stylesheet" href="../css/jquery.toast.css">
     <script src="../js/jquery.toast.js" type="text/javascript"></script>
 
-    <!-- OSM Buildings-->
+    <!-- OSM Buildings
     <script src="../js/OSMBuildings-Leaflet.js"></script>
+    -->
 
 </head>
 
@@ -88,7 +89,11 @@
     var link =' ../indikatoren_siedlung.html';
 
     //initialize the map
-    var map = L.map('map', {zoomControl:false,twoFingerZoom:true,zoomAnimation:false});
+    var map = L.map('map', {
+        zoomControl:false,
+        twoFingerZoom:true,
+        zoomAnimation:false,
+    });
 
     $(document).ready(function() {
         init_map();
